--- a/project-1/styles/style.css
+++ b/project-1/styles/style.css
@@ -17,7 +17,7 @@ body {
   width: 1000px;
   margin: 0 auto;
   padding: 20px;
-   background-image: url(/project-1/images/background3.jpg);
+   background-image: url(/project-1/images/background11.jpg);
 }
  
   main{
@@ -40,11 +40,23 @@ h1 {
 img {
   display: block;
   margin: 0 auto;
-  width: 500px;
+  width: 300px;
   padding-bottom: 1cm;
  
 }
+ 
+.gallery {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
 
+}
+.card {
+  border: block;
+  border-color: black;
+  border-width: 10px;
+}
 
 
 header {
