--- a/project-1/styles/style.css
+++ b/project-1/styles/style.css
@@ -21,11 +21,11 @@ body {
 }
  
   main{
-    width: 600px;
+    width: auto;
    background-color: white;
     margin-left: auto;
     margin-right: auto;
-    padding: 40px;
+    padding: 100px;
     
   
   }
@@ -37,27 +37,55 @@ h1 {
   text-align: center;
 }
 
-img {
+.photo img {
   display: block;
   margin: 0 auto;
-  width: 300px;
-  padding-bottom: 1cm;
- 
+  width: 600px;
+  height: 500px;
+  padding: 1cm;
+ object-fit: cover;
 }
  
 .gallery {
   flex-wrap: wrap;
   display: flex;
-  justify-content: center;
   flex-direction: row;
+  justify-content: center;
+
 
 }
 .card {
-  border: block;
-  border-color: black;
-  border-width: 10px;
+
+  width: auto;
+  height: auto;
+  margin: 4px;
+
 }
 
+
+
+.card img {
+  display: block;
+  margin: 0 auto;
+  width: 300px;
+  height: 300px;
+  padding-bottom: 1cm;
+  padding-top: 0;
+  object-fit: cover;
+ 
+ 
+}
+
+.card h3 {
+
+  font-family: sans-serif;
+  font-size: 25px;
+  text-align: center;
+  max-width: 400px;
+  margin-top: 20px;
+  color: rgba(93, 15, 15, 0.831)
+
+}
 
 header {
   background-color: white;
